Barra superior PARTE 1

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <h1>Teste</h1>
+    <header>
+        <nav class="container">
+            <!-- A class "container" está presente no bootstrap que foi instalado e já possui uma estilização pré-definida. -->
+            <h1> Magno Guedes' DSMovie</h1>
+            <a href="https://github.com/moguedes">/moguedes</a>
+        </nav>
+    </header>
 </body>
 </html>
