Barra superior PARTE 2

--- a/index.html
+++ b/index.html
@@ -12,8 +12,17 @@
     <header>
         <nav class="container">
             <!-- A class "container" está presente no bootstrap que foi instalado e já possui uma estilização pré-definida. -->
-            <h1> Magno Guedes' DSMovie</h1>
-            <a href="https://github.com/moguedes">/moguedes</a>
+            
+                <div class="dsmovie-contact-container">
+                    <img id="brasao" src="img/brasao.png" alt="Brasao Guedes">
+                    <h1> Magno Guedes' DSMovie</h1>
+                </div>
+            
+
+            <div class="dsmovie-contact-container">
+                <img src="img/github.svg" alt="Github icon">
+                <a href="https://github.com/moguedes">/moguedes</a>
+            </div>
         </nav>
     </header>
 </body>
