--- a/index.html
+++ b/index.html
@@ -25,5 +25,20 @@
             </div>
         </nav>
     </header>
+
+    <main>
+        <section id="dsmovie-card-list" class="container">
+
+           <div class="dsmovie-card">
+                <img src="https://www.themoviedb.org/t/p/w500_and_h282_face/rvtdN5XkWAfGX6xDuPL6yYS2seK.jpg" alt="The Batman Poster">
+                <div class="dsmovie-card-description">
+                    <h3>The Batman</h3>
+                    <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                </div>
+           </div>
+
+        </section>
+    </main>
+
 </body>
 </html>
