--- a/index.html
+++ b/index.html
@@ -1,44 +1,196 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DSMovie</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/styles.css">
-</head>
-<body>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="css/styles.css" />
+  </head>
+  <body>
     <header>
-        <nav class="container">
-            <!-- A class "container" está presente no bootstrap que foi instalado e já possui uma estilização pré-definida. -->
-            
-                <div class="dsmovie-contact-container">
-                    <img id="brasao" src="img/brasao.png" alt="Brasao Guedes">
-                    <h1> Magno Guedes' DSMovie</h1>
-                </div>
-            
+      <nav class="container">
+        <!-- A class "container" está presente no bootstrap que foi instalado e já possui uma estilização pré-definida. -->
 
-            <div class="dsmovie-contact-container">
-                <img src="img/github.svg" alt="Github icon">
-                <a href="https://github.com/moguedes">/moguedes</a>
-            </div>
-        </nav>
+        <div class="dsmovie-contact-container">
+          <img id="brasao" src="img/brasao.png" alt="Brasao Guedes" />
+          <h1>Magno Guedes' DSMovie</h1>
+        </div>
+
+        <div class="dsmovie-contact-container">
+          <img src="img/github.svg" alt="Github icon" />
+          <a href="https://github.com/moguedes">/moguedes</a>
+        </div>
+      </nav>
     </header>
 
     <main>
-        <section id="dsmovie-card-list" class="container">
+      <section id="dsmovie-card-list" class="container">
+        <div class="row">
 
-           <div class="dsmovie-card">
-                <img src="https://www.themoviedb.org/t/p/w500_and_h282_face/rvtdN5XkWAfGX6xDuPL6yYS2seK.jpg" alt="The Batman Poster">
-                <div class="dsmovie-card-description">
+            <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                <div class="dsmovie-card">
+                  <img
+                    src="https://www.themoviedb.org/t/p/w500_and_h282_face/rvtdN5XkWAfGX6xDuPL6yYS2seK.jpg"
+                    alt="The Batman Poster"
+                  />
+                  <div class="dsmovie-card-description">
                     <h3>The Batman</h3>
                     <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                  </div>
                 </div>
-           </div>
+            </div>
 
-        </section>
+            <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                <div class="dsmovie-card">
+                  <img
+                    src="https://www.themoviedb.org/t/p/w500_and_h282_face/rvtdN5XkWAfGX6xDuPL6yYS2seK.jpg"
+                    alt="The Batman Poster"
+                  />
+                  <div class="dsmovie-card-description">
+                    <h3>The Batman</h3>
+                    <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                  </div>
+                </div>
+            </div>
+
+            <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                <div class="dsmovie-card">
+                  <img
+                    src="https://www.themoviedb.org/t/p/w500_and_h282_face/rvtdN5XkWAfGX6xDuPL6yYS2seK.jpg"
+                    alt="The Batman Poster"
+                  />
+                  <div class="dsmovie-card-description">
+                    <h3>The Batman</h3>
+                    <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                  </div>
+                </div>
+            </div>
+
+            <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                <div class="dsmovie-card">
+                  <img
+                    src="https://www.themoviedb.org/t/p/w500_and_h282_face/rvtdN5XkWAfGX6xDuPL6yYS2seK.jpg"
+                    alt="The Batman Poster"
+                  />
+                  <div class="dsmovie-card-description">
+                    <h3>The Batman</h3>
+                    <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                  </div>
+                </div>
+            </div>
+
+            <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                <div class="dsmovie-card">
+                  <img
+                    src="https://www.themoviedb.org/t/p/w500_and_h282_face/rvtdN5XkWAfGX6xDuPL6yYS2seK.jpg"
+                    alt="The Batman Poster"
+                  />
+                  <div class="dsmovie-card-description">
+                    <h3>The Batman</h3>
+                    <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                  </div>
+                </div>
+            </div>
+
+            <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                <div class="dsmovie-card">
+                  <img
+                    src="https://www.themoviedb.org/t/p/w500_and_h282_face/rvtdN5XkWAfGX6xDuPL6yYS2seK.jpg"
+                    alt="The Batman Poster"
+                  />
+                  <div class="dsmovie-card-description">
+                    <h3>The Batman</h3>
+                    <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                  </div>
+                </div>
+            </div>
+
+            <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                <div class="dsmovie-card">
+                  <img
+                    src="https://www.themoviedb.org/t/p/w500_and_h282_face/rvtdN5XkWAfGX6xDuPL6yYS2seK.jpg"
+                    alt="The Batman Poster"
+                  />
+                  <div class="dsmovie-card-description">
+                    <h3>The Batman</h3>
+                    <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                  </div>
+                </div>
+            </div>
+
+            <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                <div class="dsmovie-card">
+                  <img
+                    src="https://www.themoviedb.org/t/p/w500_and_h282_face/rvtdN5XkWAfGX6xDuPL6yYS2seK.jpg"
+                    alt="The Batman Poster"
+                  />
+                  <div class="dsmovie-card-description">
+                    <h3>The Batman</h3>
+                    <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                  </div>
+                </div>
+            </div>
+
+            <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                <div class="dsmovie-card">
+                  <img
+                    src="https://www.themoviedb.org/t/p/w500_and_h282_face/rvtdN5XkWAfGX6xDuPL6yYS2seK.jpg"
+                    alt="The Batman Poster"
+                  />
+                  <div class="dsmovie-card-description">
+                    <h3>The Batman</h3>
+                    <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                  </div>
+                </div>
+            </div>
+
+            <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                <div class="dsmovie-card">
+                  <img
+                    src="https://www.themoviedb.org/t/p/w500_and_h282_face/rvtdN5XkWAfGX6xDuPL6yYS2seK.jpg"
+                    alt="The Batman Poster"
+                  />
+                  <div class="dsmovie-card-description">
+                    <h3>The Batman</h3>
+                    <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                  </div>
+                </div>
+            </div>
+
+            <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                <div class="dsmovie-card">
+                  <img
+                    src="https://www.themoviedb.org/t/p/w500_and_h282_face/rvtdN5XkWAfGX6xDuPL6yYS2seK.jpg"
+                    alt="The Batman Poster"
+                  />
+                  <div class="dsmovie-card-description">
+                    <h3>The Batman</h3>
+                    <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                  </div>
+                </div>
+            </div>
+
+            <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                <div class="dsmovie-card">
+                  <img
+                    src="https://www.themoviedb.org/t/p/w500_and_h282_face/rvtdN5XkWAfGX6xDuPL6yYS2seK.jpg"
+                    alt="The Batman Poster"
+                  />
+                  <div class="dsmovie-card-description">
+                    <h3>The Batman</h3>
+                    <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                  </div>
+                </div>
+            </div>
+        </div>
+      </section>
     </main>
-
-</body>
+  </body>
 </html>
