Listagem de cards 3

--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
             <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
                 <div class="dsmovie-card">
                   <img
-                    src="https://www.themoviedb.org/t/p/w500_and_h282_face/rvtdN5XkWAfGX6xDuPL6yYS2seK.jpg"
-                    alt="The Batman Poster"
+                    src="https://www.themoviedb.org/t/p/w1066_and_h600_bestv2/qdIMHd4sEfJSckfVJfKQvisL02a.jpg"
+                    alt="Forrest Gump Poster"
                   />
                   <div class="dsmovie-card-description">
-                    <h3>The Batman</h3>
-                    <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                    <h3>Forrest Gump</h3>
+                    <a class="dsmovie-btn" href="form.html">Rate this movie</a>
                   </div>
                 </div>
             </div>
@@ -50,12 +50,12 @@
             <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
                 <div class="dsmovie-card">
                   <img
-                    src="https://www.themoviedb.org/t/p/w500_and_h282_face/rvtdN5XkWAfGX6xDuPL6yYS2seK.jpg"
-                    alt="The Batman Poster"
+                    src="https://www.themoviedb.org/t/p/w1066_and_h600_bestv2/rSPw7tgCH9c6NqICZef4kZjFOQ5.jpg"
+                    alt="The Godfather Poster"
                   />
                   <div class="dsmovie-card-description">
-                    <h3>The Batman</h3>
-                    <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                    <h3>The Godfather</h3>
+                    <a class="dsmovie-btn" href="form.html">Rate this movie</a>
                   </div>
                 </div>
             </div>
@@ -63,12 +63,12 @@
             <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
                 <div class="dsmovie-card">
                   <img
-                    src="https://www.themoviedb.org/t/p/w500_and_h282_face/rvtdN5XkWAfGX6xDuPL6yYS2seK.jpg"
-                    alt="The Batman Poster"
+                    src="https://www.themoviedb.org/t/p/w1000_and_h563_face/gILte6Zd7m1YneIr6MVhh30S9pr.jpg"
+                    alt="GoodFellas Poster"
                   />
                   <div class="dsmovie-card-description">
-                    <h3>The Batman</h3>
-                    <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                    <h3>GoodFellas</h3>
+                    <a class="dsmovie-btn" href="form.html">Rate this movie</a>
                   </div>
                 </div>
             </div>
@@ -76,12 +76,12 @@
             <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
                 <div class="dsmovie-card">
                   <img
-                    src="https://www.themoviedb.org/t/p/w500_and_h282_face/rvtdN5XkWAfGX6xDuPL6yYS2seK.jpg"
-                    alt="The Batman Poster"
+                    src="https://www.themoviedb.org/t/p/w1000_and_h563_face/tvNuhRlpRozDgsX1zR9gQ2aHv1X.jpg"
+                    alt="Raging Bull Poster"
                   />
                   <div class="dsmovie-card-description">
-                    <h3>The Batman</h3>
-                    <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                    <h3>Raging Bull</h3>
+                    <a class="dsmovie-btn" href="form.html">Rate this movie</a>
                   </div>
                 </div>
             </div>
@@ -89,12 +89,12 @@
             <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
                 <div class="dsmovie-card">
                   <img
-                    src="https://www.themoviedb.org/t/p/w500_and_h282_face/rvtdN5XkWAfGX6xDuPL6yYS2seK.jpg"
-                    alt="The Batman Poster"
+                    src="https://www.themoviedb.org/t/p/w1000_and_h563_face/5MVSXJieOhbyZudCnV1H4YJpfPV.jpg"
+                    alt="Taxi Driver Poster"
                   />
                   <div class="dsmovie-card-description">
-                    <h3>The Batman</h3>
-                    <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                    <h3>Taxi Driver</h3>
+                    <a class="dsmovie-btn" href="form.html">Rate this movie</a>
                   </div>
                 </div>
             </div>
@@ -102,12 +102,12 @@
             <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
                 <div class="dsmovie-card">
                   <img
-                    src="https://www.themoviedb.org/t/p/w500_and_h282_face/rvtdN5XkWAfGX6xDuPL6yYS2seK.jpg"
-                    alt="The Batman Poster"
+                    src="https://www.themoviedb.org/t/p/original/vMylmakO2K9cZexNUze8wa9muJp.jpg"
+                    alt="One Flew Over the Cuckoo's Nest Poster"
                   />
                   <div class="dsmovie-card-description">
-                    <h3>The Batman</h3>
-                    <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                    <h3>One Flew Over the Cuckoo's Nest</h3>
+                    <a class="dsmovie-btn" href="form.html">Rate this movie</a>
                   </div>
                 </div>
             </div>
@@ -115,12 +115,12 @@
             <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
                 <div class="dsmovie-card">
                   <img
-                    src="https://www.themoviedb.org/t/p/w500_and_h282_face/rvtdN5XkWAfGX6xDuPL6yYS2seK.jpg"
-                    alt="The Batman Poster"
+                    src="https://www.themoviedb.org/t/p/w1066_and_h600_bestv2/vXMn5Acau1pW9hzun5P4yM7hQ6r.jpg"
+                    alt="Troy Poster"
                   />
                   <div class="dsmovie-card-description">
-                    <h3>The Batman</h3>
-                    <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                    <h3>Troy</h3>
+                    <a class="dsmovie-btn" href="form.html">Rate this movie</a>
                   </div>
                 </div>
             </div>
@@ -128,12 +128,12 @@
             <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
                 <div class="dsmovie-card">
                   <img
-                    src="https://www.themoviedb.org/t/p/w500_and_h282_face/rvtdN5XkWAfGX6xDuPL6yYS2seK.jpg"
-                    alt="The Batman Poster"
+                    src="https://www.themoviedb.org/t/p/w1066_and_h600_bestv2/aZtwH3RQ0L8jbInxr7OSc9tlGMJ.jpg"
+                    alt="Gladiator Poster"
                   />
                   <div class="dsmovie-card-description">
-                    <h3>The Batman</h3>
-                    <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                    <h3>Gladiator</h3>
+                    <a class="dsmovie-btn" href="form.html">Rate this movie</a>
                   </div>
                 </div>
             </div>
@@ -141,12 +141,12 @@
             <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
                 <div class="dsmovie-card">
                   <img
-                    src="https://www.themoviedb.org/t/p/w500_and_h282_face/rvtdN5XkWAfGX6xDuPL6yYS2seK.jpg"
-                    alt="The Batman Poster"
+                    src="https://www.themoviedb.org/t/p/w1066_and_h600_bestv2/hjQp148VjWF4KjzhsD90OCMr11h.jpg"
+                    alt="Saving Private Ryan Poster"
                   />
                   <div class="dsmovie-card-description">
-                    <h3>The Batman</h3>
-                    <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                    <h3>Saving Private Ryan</h3>
+                    <a class="dsmovie-btn" href="form.html">Rate this movie</a>
                   </div>
                 </div>
             </div>
@@ -154,12 +154,12 @@
             <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
                 <div class="dsmovie-card">
                   <img
-                    src="https://www.themoviedb.org/t/p/w500_and_h282_face/rvtdN5XkWAfGX6xDuPL6yYS2seK.jpg"
-                    alt="The Batman Poster"
+                    src="https://www.themoviedb.org/t/p/w1066_and_h600_bestv2/loRmRzQXZeqG78TqZuyvSlEQfZb.jpg"
+                    alt="Schindler's List Poster"
                   />
                   <div class="dsmovie-card-description">
-                    <h3>The Batman</h3>
-                    <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                    <h3>Schindler's List</h3>
+                    <a class="dsmovie-btn" href="form.html">Rate this movie</a>
                   </div>
                 </div>
             </div>
@@ -167,12 +167,12 @@
             <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
                 <div class="dsmovie-card">
                   <img
-                    src="https://www.themoviedb.org/t/p/w500_and_h282_face/rvtdN5XkWAfGX6xDuPL6yYS2seK.jpg"
-                    alt="The Batman Poster"
+                    src="https://www.themoviedb.org/t/p/w1000_and_h563_face/8HZgoLExCTFOVRPndUnW4FjZZLf.jpg"
+                    alt="The Silence of the Lambs Poster"
                   />
                   <div class="dsmovie-card-description">
-                    <h3>The Batman</h3>
-                    <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                    <h3>The Silence of the Lambs</h3>
+                    <a class="dsmovie-btn" href="form.html">Rate this movie</a>
                   </div>
                 </div>
             </div>
@@ -180,12 +180,12 @@
             <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
                 <div class="dsmovie-card">
                   <img
-                    src="https://www.themoviedb.org/t/p/w500_and_h282_face/rvtdN5XkWAfGX6xDuPL6yYS2seK.jpg"
-                    alt="The Batman Poster"
+                    src="https://www.themoviedb.org/t/p/w1000_and_h563_face/iNh3BivHyg5sQRPP1KOkzguEX0H.jpg"
+                    alt="The Shawshank Redemption Poster"
                   />
                   <div class="dsmovie-card-description">
-                    <h3>The Batman</h3>
-                    <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                    <h3>The Shawshank Redemption</h3>
+                    <a class="dsmovie-btn" href="form.html">Rate this movie</a>
                   </div>
                 </div>
             </div>
