--- a/form.html
+++ b/form.html
@@ -41,9 +41,31 @@
                 src="https://www.themoviedb.org/t/p/w1066_and_h600_bestv2/qdIMHd4sEfJSckfVJfKQvisL02a.jpg"
                 alt="Forrest Gump Poster"
               />
-              <div class="dsmovie-card-description">
+              <div class="dsmovie-form-description">
                 <h3>Forrest Gump</h3>
-                <a class="dsmovie-btn" href="index.html">Cancel</a>
+
+                <form class="dsmovie-form">
+                  <div class="form-group dsmovie-form-group">
+                    <label for="email">Email address:</label>
+                    <input class="form-control" type="email" id="email">
+                  </div>
+                  <div class="form-group dsmovie-form-group">
+                    <label for="score">Rate this:</label>
+                    <select class="form-control" name="score" id="score">
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5</option>
+                    </select>
+                  </div>
+                  <div class="dsmovie-form-btn-container"> 
+                    <button class="dsmovie-btn" type="submit">Rate</button>
+                    <a class="dsmovie-btn" href="index.html">Cancel</a>
+                  </div>
+                </form>
+
+                
               </div>
             </div>
           </div>
