Avaliação com estrelas

--- a/index.html
+++ b/index.html
@@ -42,7 +42,20 @@
                   />
                   <div class="dsmovie-card-description">
                     <h3>Forrest Gump</h3>
-                    <a class="dsmovie-btn" href="form.html">Rate this movie</a>
+                    <div class="dsmovie-card-description-bottom">
+                      <h4>4.0</h4>
+                      <div>
+                        <img src="img/star-full.svg" alt="full star">
+                        <img src="img/star-full.svg" alt="full star">
+                        <img src="img/star-full.svg" alt="full star">
+                        <img src="img/star-full.svg" alt="full star">
+                        <img src="img/star-emptysvg.svg" alt="empty star">
+                      </div>
+                      <p>237 votes</p>
+                      <a class="dsmovie-btn" href="form.html">Rate this movie</a>
+                    </div>
+
+                   
                   </div>
                 </div>
             </div>
