Polimento da listagem

--- a/index.html
+++ b/index.html
@@ -43,19 +43,17 @@
                   <div class="dsmovie-card-description">
                     <h3>Forrest Gump</h3>
                     <div class="dsmovie-card-description-bottom">
-                      <h4>4.0</h4>
+                      <h4>4.5</h4>
                       <div>
                         <img src="img/star-full.svg" alt="full star">
                         <img src="img/star-full.svg" alt="full star">
                         <img src="img/star-full.svg" alt="full star">
                         <img src="img/star-full.svg" alt="full star">
-                        <img src="img/star-emptysvg.svg" alt="empty star">
+                        <img src="img/star-half.svg" alt="half star">
                       </div>
-                      <p>237 votes</p>
-                      <a class="dsmovie-btn" href="form.html">Rate this movie</a>
+                      <p>567 votes</p>
+                      <a class="dsmovie-btn" href="form-forrest-gump.html">Rate this movie</a>
                     </div>
-
-                   
                   </div>
                 </div>
             </div>
@@ -68,7 +66,18 @@
                   />
                   <div class="dsmovie-card-description">
                     <h3>The Godfather</h3>
-                    <a class="dsmovie-btn" href="form.html">Rate this movie</a>
+                    <div class="dsmovie-card-description-bottom">
+                      <h4>4.8</h4>
+                      <div>
+                        <img src="img/star-full.svg" alt="full star">
+                        <img src="img/star-full.svg" alt="full star">
+                        <img src="img/star-full.svg" alt="full star">
+                        <img src="img/star-full.svg" alt="full star">
+                        <img src="img/star-half.svg" alt="half star">
+                      </div>
+                      <p>500 votes</p>
+                      <a class="dsmovie-btn" href="form-godfather.html">Rate this movie</a>
+                    </div>
                   </div>
                 </div>
             </div>
@@ -81,7 +90,18 @@
                   />
                   <div class="dsmovie-card-description">
                     <h3>GoodFellas</h3>
-                    <a class="dsmovie-btn" href="form.html">Rate this movie</a>
+                    <div class="dsmovie-card-description-bottom">
+                      <h4>4.8</h4>
+                      <div>
+                        <img src="img/star-full.svg" alt="full star">
+                        <img src="img/star-full.svg" alt="full star">
+                        <img src="img/star-full.svg" alt="full star">
+                        <img src="img/star-full.svg" alt="full star">
+                        <img src="img/star-half.svg" alt="half star">
+                      </div>
+                      <p>300 votes</p>
+                      <a class="dsmovie-btn" href="form-goodfellas.html">Rate this movie</a>
+                    </div>
                   </div>
                 </div>
             </div>
@@ -94,7 +114,18 @@
                   />
                   <div class="dsmovie-card-description">
                     <h3>Raging Bull</h3>
-                    <a class="dsmovie-btn" href="form.html">Rate this movie</a>
+                    <div class="dsmovie-card-description-bottom">
+                      <h4>5.0</h4>
+                      <div>
+                        <img src="img/star-full.svg" alt="full star">
+                        <img src="img/star-full.svg" alt="full star">
+                        <img src="img/star-full.svg" alt="full star">
+                        <img src="img/star-full.svg" alt="full star">
+                        <img src="img/star-full.svg" alt="full star">
+                      </div>
+                      <p>167 votes</p>
+                      <a class="dsmovie-btn" href="form-raging-bull.html">Rate this movie</a>
+                    </div>
                   </div>
                 </div>
             </div>
@@ -107,7 +138,18 @@
                   />
                   <div class="dsmovie-card-description">
                     <h3>Taxi Driver</h3>
-                    <a class="dsmovie-btn" href="form.html">Rate this movie</a>
+                    <div class="dsmovie-card-description-bottom">
+                      <h4>4.3</h4>
+                      <div>
+                        <img src="img/star-full.svg" alt="full star">
+                        <img src="img/star-full.svg" alt="full star">
+                        <img src="img/star-full.svg" alt="full star">
+                        <img src="img/star-full.svg" alt="full star">
+                        <img src="img/star-half.svg" alt="half star">
+                      </div>
+                      <p>255 votes</p>
+                      <a class="dsmovie-btn" href="form-taxi-driver.html">Rate this movie</a>
+                    </div>
                   </div>
                 </div>
             </div>
@@ -120,7 +162,18 @@
                   />
                   <div class="dsmovie-card-description">
                     <h3>One Flew Over the Cuckoo's Nest</h3>
-                    <a class="dsmovie-btn" href="form.html">Rate this movie</a>
+                    <div class="dsmovie-card-description-bottom">
+                      <h4>4.8</h4>
+                      <div>
+                        <img src="img/star-full.svg" alt="full star">
+                        <img src="img/star-full.svg" alt="full star">
+                        <img src="img/star-full.svg" alt="full star">
+                        <img src="img/star-full.svg" alt="full star">
+                        <img src="img/star-half.svg" alt="half star">
+                      </div>
+                      <p>129 votes</p>
+                      <a class="dsmovie-btn" href="form-one-flew-over-the-cuckoo's-nest.html">Rate this movie</a>
+                    </div>
                   </div>
                 </div>
             </div>
@@ -133,7 +186,18 @@
                   />
                   <div class="dsmovie-card-description">
                     <h3>Troy</h3>
-                    <a class="dsmovie-btn" href="form.html">Rate this movie</a>
+                    <div class="dsmovie-card-description-bottom">
+                      <h4>3.7</h4>
+                      <div>
+                        <img src="img/star-full.svg" alt="full star">
+                        <img src="img/star-full.svg" alt="full star">
+                        <img src="img/star-full.svg" alt="full star">
+                        <img src="img/star-half.svg" alt="half star">
+                        <img src="img/star-emptysvg.svg" alt="empty star">
+                      </div>
+                      <p>329 votes</p>
+                      <a class="dsmovie-btn" href="form-troy.html">Rate this movie</a>
+                    </div>
                   </div>
                 </div>
             </div>
@@ -146,7 +210,18 @@
                   />
                   <div class="dsmovie-card-description">
                     <h3>Gladiator</h3>
-                    <a class="dsmovie-btn" href="form.html">Rate this movie</a>
+                    <div class="dsmovie-card-description-bottom">
+                      <h4>4.6</h4>
+                      <div>
+                        <img src="img/star-full.svg" alt="full star">
+                        <img src="img/star-full.svg" alt="full star">
+                        <img src="img/star-full.svg" alt="full star">
+                        <img src="img/star-full.svg" alt="full star">
+                        <img src="img/star-half.svg" alt="half star">
+                      </div>
+                      <p>558 votes</p>
+                      <a class="dsmovie-btn" href="form-gladiator.html">Rate this movie</a>
+                    </div>
                   </div>
                 </div>
             </div>
@@ -159,7 +234,18 @@
                   />
                   <div class="dsmovie-card-description">
                     <h3>Saving Private Ryan</h3>
-                    <a class="dsmovie-btn" href="form.html">Rate this movie</a>
+                    <div class="dsmovie-card-description-bottom">
+                      <h4>4.3</h4>
+                      <div>
+                        <img src="img/star-full.svg" alt="full star">
+                        <img src="img/star-full.svg" alt="full star">
+                        <img src="img/star-full.svg" alt="full star">
+                        <img src="img/star-full.svg" alt="full star">
+                        <img src="img/star-half.svg" alt="half star">
+                      </div>
+                      <p>512 votes</p>
+                      <a class="dsmovie-btn" href="form-saving-private-ryan.html">Rate this movie</a>
+                    </div>
                   </div>
                 </div>
             </div>
@@ -172,7 +258,18 @@
                   />
                   <div class="dsmovie-card-description">
                     <h3>Schindler's List</h3>
-                    <a class="dsmovie-btn" href="form.html">Rate this movie</a>
+                    <div class="dsmovie-card-description-bottom">
+                      <h4>4.2</h4>
+                      <div>
+                        <img src="img/star-full.svg" alt="full star">
+                        <img src="img/star-full.svg" alt="full star">
+                        <img src="img/star-full.svg" alt="full star">
+                        <img src="img/star-full.svg" alt="full star">
+                        <img src="img/star-half.svg" alt="half star">
+                      </div>
+                      <p>418 votes</p>
+                      <a class="dsmovie-btn" href="form-schindler's-list.html">Rate this movie</a>
+                    </div>
                   </div>
                 </div>
             </div>
@@ -185,7 +282,18 @@
                   />
                   <div class="dsmovie-card-description">
                     <h3>The Silence of the Lambs</h3>
-                    <a class="dsmovie-btn" href="form.html">Rate this movie</a>
+                    <div class="dsmovie-card-description-bottom">
+                      <h4>4.7</h4>
+                      <div>
+                        <img src="img/star-full.svg" alt="full star">
+                        <img src="img/star-full.svg" alt="full star">
+                        <img src="img/star-full.svg" alt="full star">
+                        <img src="img/star-full.svg" alt="full star">
+                        <img src="img/star-half.svg" alt="half star">
+                      </div>
+                      <p>398 votes</p>
+                      <a class="dsmovie-btn" href="form-the-silence-of-the-lambs.html">Rate this movie</a>
+                    </div>
                   </div>
                 </div>
             </div>
@@ -198,11 +306,21 @@
                   />
                   <div class="dsmovie-card-description">
                     <h3>The Shawshank Redemption</h3>
-                    <a class="dsmovie-btn" href="form.html">Rate this movie</a>
+                    <div class="dsmovie-card-description-bottom">
+                      <h4>4.4</h4>
+                      <div>
+                        <img src="img/star-full.svg" alt="full star">
+                        <img src="img/star-full.svg" alt="full star">
+                        <img src="img/star-full.svg" alt="full star">
+                        <img src="img/star-full.svg" alt="full star">
+                        <img src="img/star-half.svg" alt="half star">
+                      </div>
+                      <p>426 votes</p>
+                      <a class="dsmovie-btn" href="form-the-shawshank-redemption.html">Rate this movie</a>
+                    </div>
                   </div>
                 </div>
             </div>
-        </div>
       </section>
     </main>
   </body>
