--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DSMovie</title>
+    <title>Magno Guedes' DSMovie</title>
+    <link rel="shortcut icon" href="img/favicon_claquete.png" type="image/x-icon">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -32,6 +33,19 @@
 
     <main>
       <section id="dsmovie-card-list" class="container">
+
+        <div class="dsmovie-pagination-container">
+          <div class="dsmovie-pagination-box">
+            <button disabled>
+              <img src="img/arrow-left.svg" alt="return">
+            </button>
+              <p>1 of 23</p>
+              <button>
+                <img src="img/arrow-right.svg" alt="next">
+              </button>
+          </div>
+        </div>
+
         <div class="row">
 
             <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
